--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<nav class="navbar">
+  <div class="logo">TRIPPLE HOST</div>
+
+  <input type="checkbox" id="menu-toggle">
+  <label for="menu-toggle" class="menu-icon">☰</label>
+
+  <ul class="menu">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="plans.html">Plans</a></li>
+    <li><a href="login.html">Login</a></li>
+    <li><a href="ticket.html">Tickets</a></li>
+  </ul>
+</nav>
 <!DOCTYPE html>
 <html>
 <head>
